chore: add initial create user use-case

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -29,6 +29,9 @@
       ],
       "@presentation/*": [
         "./src/presentation/*"
+      ],
+      "@config/*": [
+        "./src/config/*"
       ]
     }
   }
