--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "NODE_ENV=test jest --config ./test/jest-e2e.json --forceExit --runInBand"
+    "test:e2e": "NODE_ENV=test jest --config ./test/jest-e2e.json --forceExit --runInBand",
+    "test:e2e:only": "yarn test:e2e --testNamePattern"
   },
   "dependencies": {
     "@faker-js/faker": "^9.9.0",
