--- a/.env.development.example
+++ b/.env.development.example
@@ -3,3 +3,4 @@ POSTGRES_USER=test_user
 POSTGRES_PASSWORD=test_password
 POSTGRES_HOST=localhost
 POSTGRES_PORT=5432
+REDIS_PASSWORD="redis_password"
