--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,11 +9,20 @@ services:
     volumes:
       - postgres_data:/var/lib/postgresql/data
     networks:
-      - postgres_network
-
+      - app_network
+  cache:
+    image: redis:latest
+    container_name: redis_test
+    ports:
+      - 6379:6379
+    command: ["redis-server", "--requirepass", "${REDIS_PASSWORD}"]
+    env_file:
+      - ".env.test"
+    networks:
+      - app_network
 volumes:
   postgres_data:
 
 networks:
-  postgres_network:
+  app_network:
     driver: bridge
