--- a/.env.development.example
+++ b/.env.development.example
@@ -1,6 +1,12 @@
+# DATABASE
+
 POSTGRES_DB=test_database
 POSTGRES_USER=test_user
 POSTGRES_PASSWORD=test_password
 POSTGRES_HOST=localhost
 POSTGRES_PORT=5432
 REDIS_PASSWORD="redis_password"
+
+# JWT
+
+APP_SECRET=
