--- a/.env.production.example
+++ b/.env.production.example
@@ -1,6 +1,12 @@
-POSTGRES_DB=
-POSTGRES_USER=
-POSTGRES_PASSWORD=
-POSTGRES_HOST=
-POSTGRES_PORT=
+# DATABASE
+
+POSTGRES_DB=test_database
+POSTGRES_USER=test_user
+POSTGRES_PASSWORD=test_password
+POSTGRES_HOST=localhost
+POSTGRES_PORT=5432
 REDIS_PASSWORD="redis_password"
+
+# JWT
+
+APP_SECRET=
