--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "NODE_ENV=test jest --config ./test/jest-e2e.json --forceExit --runInBand",
-    "test:e2e:only": "yarn test:e2e --testNamePattern"
+    "test:e2e:only": "yarn test:e2e --testNamePattern",
+    "prepare": "husky"
   },
   "dependencies": {
     "@faker-js/faker": "^9.9.0",
@@ -34,6 +35,7 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
     "dotenv": "^17.2.1",
+    "husky": "^9.1.7",
     "pg": "^8.16.3",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
